feat: added basic auth to login.
